# melange_exporter

./: .gitignore  CMakeLists.txt  _clang-format  arg_parse.hpp  boba_io.cpp  boba_io.hpp  boba_scene.cpp  boba_scene.hpp  boba_scene_format.hpp  boba_scene_io.cpp  boba_scene_io.hpp  deferred_writer.cpp  deferred_writer.hpp  export_camera.cpp  export_camera.hpp  export_light.cpp  export_light.hpp  export_mesh.cpp  export_mesh.hpp  export_misc.cpp  export_misc.hpp  exporter.cpp  exporter.hpp  exporter_helpers.cpp  exporter_helpers.hpp  exporter_stubs.cpp  exporter_stubs.hpp  exporter_utils.cpp  exporter_utils.hpp  input_parser.py  input_parser_binary_hpp.py  input_parser_common.py  input_parser_friendly_hpp.py  input_parser_templates.py  melange_helpers.cpp  melange_helpers.hpp  output_format.txt  precompiled.hpp  print_funcs.cpp  save_scene.cpp  (+2 more)
_win32/: exporter.sln  exporter.vcxproj
compress/: common.h  forsythtriangleorderoptimizer.cpp  forsythtriangleorderoptimizer.h  snorm.h  tristripper.cpp  tristripper.hpp
